# freebsd-ci-actions

./: .gitignore  README.md  run-without-stress.sh  run.sh  zen-info.sh
.github/workflows/: ibs-full-test.yml
actions/build-kernel/: action.yml
actions/report-results/: action.yml
actions/run-atf-tests/: action.yml
actions/setup-freebsd-build/: action.yml
caller-examples/: call-ibs-full.yml  call-l3-full.yml  call-smoke.yml  call-umcdf-full.yml
ci/beastai/: beast_ai.sh  beast_ai_memory.jsonl
ci/tools/: ci.conf
dev-docs/: AI-INSTRUCTIONS.md  CHANGELOG.md  HUMAN-ONBOARDING.md  _global.md  ci-status.md  index.jsonl  jira-tickets.md  phases-plan.md  repos.jsonl  runner-and-cicd-guide.md  view.sh
dev-docs/apis/: github-actions-api.md  jira.md
dev-docs/daily/: 2026-06-02.md  2026-06-04.md  2026-06-05.md
dev-docs/infra/: ci-vm-infra.md  linuxulator.md  runner-setup.md
dev-docs/modules/: ci-actions-workflows.md  (+9 more)
docs/: TODO.md  ibs-tests.md  ibs_tests.md  pmc-skew-v1-v2-v3-v4.md  pmc-skew-v1-v2-v3.md  pmc-skew-v1-vs-v2.md  stress-tests.md
py-scripts/: pmc_grouping_skew_collect.py  pmc_grouping_skew_v2_collect.py  pmc_grouping_skew_v3_collect.py  pmc_grouping_skew_v4_collect.py
py-scripts/pyc_compute_freebsd/: Makefile  README.md  pyproject.toml  setup.py
py-scripts/pyc_compute_freebsd/ext/: _fbcacheprobe.c
py-scripts/pyc_compute_freebsd/freebsd_cache_hotspot/: __init__.py  __main__.py  analyzer.py  collector.py  events.py  report.py  sweep.py  topology.py
py-scripts/pyc_compute_freebsd/tests/: test_smoke.py
scripts/: install-runner-freebsd.sh
(+130 files in other folders)
